Fixed line wrapping in question preview & added 'limitToReplace' filter

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -287,5 +287,5 @@ button[type="submit"]:disabled:hover {
 }
 
 .fakePre {
-	white-space: pre;
+	white-space: pre-line;
 }
